grammar.js
    source_file: ($) =>
      seq(
        optional($._newline),
        repeat(seq($._top_level_item, optional($._newline))),
      ),

    _top_level_item: ($) => choice($._top_level_decl, $._statement),

    annotated_declaration: ($) =>
      seq(
        $._annotation,
        repeat(seq(optional($._newline), $._annotation)),
        optional($._newline),
        choice(
          $.struct_declaration,
          $.enum_declaration,
          $.builtin_declaration,
          $.protocol_declaration,
          $.function_declaration,
          $.priv_function,
          $.extern_function_declaration,
          $.const_declaration,
          $.type_alias_declaration,
        ),
      ),

    // ====================================================================
    // 2. Annotations
    // ====================================================================

    _annotation: ($) => $.annotation,

    annotation: ($) =>
      seq(
        "@",
        field("name", $.identifier),
        optional(field("value", $._annotation_value)),
      ),

    _annotation_value: ($) => choice($.string, $.multiline_string, "false"),

    // ====================================================================
    // 3. Struct
    // ====================================================================

    // The name accepts a dotted path (`struct Process.CrashInfo`) for
    // types nested under an owning type. Owner segments get their own
    // field so `name:` queries keep capturing the declared leaf.
    struct_declaration: ($) =>
      seq(
        optional("priv"),
        "struct",
        repeat(seq(field("owner", $.type_identifier), ".")),
        field("name", $.type_identifier),
        optional(field("type_parameters", $.type_parameters)),
        optional(seq(":", field("conformances", $.conformance_list))),
        optional($._newline),
        repeat(seq($._struct_member, optional($._newline))),
        "end",
      ),

    // Header conformance list: `struct App: Process<C, M, R>, Debug`.
    // The listed protocols are satisfied by the type body's functions.
    _struct_member: ($) =>
      choice(
        $.struct_field,
        $.function_declaration,
        $.priv_function,
        $.test_declaration,
        $.const_declaration,
        $.struct_declaration,
        $.enum_declaration,
        $.protocol_declaration,
        $.annotated_declaration,
      ),

    protocol_declaration: ($) =>
      seq(
        optional("priv"),
        "protocol",
        repeat(seq(field("owner", $.type_identifier), ".")),
        field("name", $.type_identifier),
        optional(field("type_parameters", $.type_parameters)),
        optional($._newline),
        repeat(
          seq(
            choice($.protocol_method, $.annotated_protocol_method),
            optional($._newline),
          ),
        ),
        "end",
      ),

    protocol_method: ($) =>
      choice(
        prec.dynamic(10, seq(...fnHeader($), ...blockBody($), "end")),
        prec.dynamic(-10, seq(...fnHeader($))),
      ),

    // ====================================================================
    // 7. Impl and Extend
    // ====================================================================

    // `impl Trait for Target` — protocol conformance only. Bare
    // `impl Target` is not supported; users write `extend Target`
    // for inherent methods (see `extend_block` below).
    extend_block: ($) =>
      seq(
        "extend",
        field("target", $._type_expression),
        optional($._newline),
        repeat(seq($._impl_member, optional($._newline))),
        "end",
      ),

    _impl_member: ($) =>
      choice(
        $.function_declaration,
        $.priv_function,
        $.test_declaration,
        $.type_alias_declaration,
        $.annotated_declaration,
      ),

    // `test "description" ... end`. The body has no parameters and
    // fails through `assert` or `fail`. Allowed at the top level and
    // inside any type body, where the enclosing type is the suite.
    function_declaration: ($) =>
      prec.dynamic(10, seq(...fnHeader($), ...blockBody($), "end")),

    extern_function_declaration: ($) =>
      prec.dynamic(-10, seq(optional("priv"), ...fnHeader($))),

    return_type: ($) => seq("->", $._type_expression),

    // `! E` error channel in a signature. Bare `! E` means a unit success.
    parameters: ($) =>
      prec.dynamic(
        20,
        seq(
          "(",
          optional($._newline),
          optional(
            seq(
              commaSep1(optional($._newline), $._param_or_self),
              optional(","),
            ),
          ),
          optional($._newline),
          ")",
        ),
      ),

    _param_or_self: ($) => choice($.parameter, $.self_parameter),

    parameter: ($) =>
      seq(
        field("name", $.identifier),
        ":",
        field("type", $._type_expression),
        optional(seq("=", field("default", $._expression))),
      ),

    self_parameter: ($) => prec(2, "self"),

    // ====================================================================
    // 9. Type expressions
    // ====================================================================

    _type_expression: ($) => choice($.union_type, $._primary_type),

    // Higher precedence than `_type_expression` so we always extend
    // a union greedily when `|` follows a primary type.
    _primary_type: ($) =>
      choice(
        $.function_type,
        $.generic_type,
        $.named_type,
        $.self_type,
        $.tuple_type,
        $.unit_type,
      ),

    generic_type: ($) =>
      prec(
        PREC.type_args,
        seq(
          field("name", $.named_type),
          field("type_arguments", $.type_arguments),
        ),
      ),

    type_arguments: ($) =>
      seq(
        "<",
        optional($._newline),
        commaSep1(
          optional($._newline),
          choice(
            $._type_expression,
            alias($._bounded_type_argument, $.type_parameter),
          ),
        ),
        optional($._newline),
        ">",
      ),

    // `impl Equality for List<T: Equality>` introduces `T` with a
    // bound in the target's argument list. Only an impl target admits
    // this, but the grammar accepts it in any argument list and
    // leaves the check to the compiler.
    _bounded_type_argument: ($) =>
      seq(field("name", $.type_identifier), ":", field("bounds", $._bounds)),

    named_type: ($) =>
      prec.left(seq($.type_identifier, repeat(seq(".", $.type_identifier)))),

    unit_type: ($) => seq("(", ")"),

    // Generic parameters on declarations (uses & for trait bounds).
    block: ($) =>
      seq(
        $._statement,
        repeat(seq($._newline, $._statement)),
        optional($._newline),
      ),

    _statement: ($) =>
      choice(
        $.return_statement,
        $.break_statement,
        $.assert_statement,
        $.compound_assignment,
        $.assignment,
        $.expression_statement,
      ),

    expression_statement: ($) => $._expression,

    break_statement: ($) => "break",

    // `assert cond` or `assert cond, "message"` inside a test body.
    assignment: ($) =>
      choice(
        // Typed binding: `name: Type = expr`
        seq(
          field("target", $.identifier),
          ":",
          field("type", $._type_expression),
          "=",
          optional($._newline),
          field("value", $._expression),
        ),
        // Plain assignment: `lvalue = expr`. A wildcard target
        // (`_ = expr`) discards the value.
        prec(
          1,
          seq(
            field("target", choice($._lvalue, $.wildcard)),
            "=",
            optional($._newline),
            field("value", $._expression),
          ),
        ),
        // Tuple destructuring: `(a, b) = expr`. Elements are
        // irrefutable per the reference parser: bindings, wildcards,
        // and nested tuples only.
        seq(
          field("target", $.tuple_binding),
          "=",
          optional($._newline),
          field("value", $._expression),
        ),
      ),

    compound_assignment: ($) =>
      seq(
        field("target", $._lvalue),
        field("operator", choice("+=", "-=", "*=", "/=", "%=")),
        optional($._newline),
        field("value", $._expression),
      ),

    _lvalue: ($) => choice($.identifier, $.field_access, "self"),

    _expression: ($) =>
      choice(
        $.rescue_expression,
        $.short_closure,
        $.ternary_expression,
        $.binary_expression,
        $.unary_expression,
        $.try_expression,
        $._postfix_expr,
      ),

    // `expr rescue e -> handler`. Binds loosest and chains left. The
    // scanner suppresses the newline before a line-leading `rescue`.
    binary_expression: ($) =>
      choice(
        ...[
          ["or", PREC.or],
          ["and", PREC.and],
        ].map(([op, p]) =>
          prec.left(
            p,
            seq(
              field("left", $._expression),
              field("operator", alias(op, $.operator)),
              optional($._newline),
              field("right", $._expression),
            ),
          ),
        ),
        ...[
          ["==", PREC.cmp],
          ["!=", PREC.cmp],
          ["<", PREC.cmp],
          [">", PREC.cmp],
          ["<=", PREC.cmp],
          [">=", PREC.cmp],
        ].map(([op, p]) =>
          prec.left(
            p,
            seq(
              field("left", $._expression),
              field("operator", op),
              optional($._newline),
              field("right", $._expression),
            ),
          ),
        ),
        ...[
          ["+", PREC.add],
          ["-", PREC.add],
          ["<>", PREC.add],
        ].map(([op, p]) =>
          prec.left(
            p,
            seq(
              field("left", $._expression),
              field("operator", op),
              optional($._newline),
              field("right", $._expression),
            ),
          ),
        ),
        ...[
          ["*", PREC.mul],
          ["/", PREC.mul],
          ["%", PREC.mul],
        ].map(([op, p]) =>
          prec.left(
            p,
            seq(
              field("left", $._expression),
              field("operator", op),
              optional($._newline),
              field("right", $._expression),
            ),
          ),
        ),
      ),

    unary_expression: ($) =>
      choice(
        prec(
          PREC.unary,
          seq(field("operator", "-"), field("operand", $._expression)),
        ),
        prec(
          PREC.not,
          seq(field("operator", "not"), field("operand", $._expression)),
        ),
      ),

    _postfix_expr: ($) =>
      choice($.call, $.method_call, $.field_access, $._primary_expr),

    call: ($) =>
      prec(
        PREC.postfix,
        seq(
          field("callee", $._postfix_expr),
          field("arguments", $.argument_list),
        ),
      ),

    // method_call binds tighter than field_access so `x.foo(...)`
    // chooses the call interpretation rather than a field access
    // followed by a parenthesized expression.
    method_call: ($) =>
      prec(
        PREC.postfix + 1,
        seq(
          field("receiver", $._postfix_expr),
          ".",
          field("method", $.identifier),
          field("arguments", $.argument_list),
        ),
      ),

    argument_list: ($) =>
      seq(
        "(",
        optional($._newline),
        optional(
          seq(commaSep1(optional($._newline), $.argument), optional(",")),
        ),
        optional($._newline),
        ")",
      ),

    argument: ($) =>
      choice(
        seq(
          field("name", $.identifier),
          ":",
          optional($._newline),
          field("value", $._expression),
        ),
        field("value", $._expression),
      ),

    self_expression: ($) => "self",

    unit_literal: ($) => seq("(", ")"),

    // ====================================================================
    // 13. Constructions
    // ====================================================================

    struct_construction: ($) =>
      seq(
        field("type", $.named_type),
        "{",
        optional($._newline),
        commaSep(optional($._newline), $.field_init),
        optional(","),
        optional($._newline),
        "}",
      ),

    field_init: ($) =>
      seq(
        field("name", $.identifier),
        ":",
        optional($._newline),
        field("value", $._expression),
      ),

    // The trailing `(...)` / `{...}` is preferred when present — that's
    // how `Some(x)` and `Point.Origin{}` distinguish themselves from a
    // bare path followed by a separate call expression.
    enum_construction: ($) =>
      prec.right(
        seq(
          field("type", $._enum_construction_path),
          ".",
          field("variant", $.type_identifier),
          optional(
            choice(
              seq(
                "(",
                optional($._newline),
                commaSep(optional($._newline), $._expression),
                optional($._newline),
                ")",
              ),
              seq(
                "{",
                optional($._newline),
                commaSep(optional($._newline), $.field_init),
                optional(","),
                optional($._newline),
                "}",
              ),
            ),
          ),
        ),
      ),

    // No outer precedence: we only want this interpretation when the
    // input is actually `Type(.Type)+ . Variant` for an
    // enum_construction; in `List.new()` we want the same prefix to
    // reduce as a `_primary_expr` instead. No static associativity
    // either: at each `.` the path can extend or stop so the next
    // segment becomes the variant (`Process.StopReason.Normal`). The
    // conflicts list lets GLR explore both split points.
    _enum_construction_path: ($) =>
      seq($.type_identifier, repeat(seq(".", $.type_identifier))),

    // ====================================================================
    // 14. Closures
    // ====================================================================

    if_expression: ($) =>
      seq(
        "if",
        field("condition", $._expression),
        ...blockBody($, "then"),
        optional(seq("else", ...blockBody($, "else"))),
        "end",
      ),

    match_expression: ($) =>
      seq(
        "match",
        field("subject", $._expression),
        optional($._newline),
        repeat(seq($.match_arm, optional($._newline))),
        "end",
      ),

    // The dynamic precedence settles a real ambiguity: after an arm
    // body, a line like `_ -> x` or `flag -> x` could also parse as a
    // short-closure statement extending the previous body. Prefer the
    // new-arm interpretation.
    match_arm: ($) =>
      prec.dynamic(
        1,
        seq(
          field("pattern", $.or_pattern),
          optional(seq("when", field("guard", $._expression))),
          "->",
          field("body", $._match_body),
        ),
      ),

    // The trailing newline between an arm body's last statement and
    // the next arm (or the closing `end`) is consumed by the parent
    // `match_expression` / `cond_expression` loop, so this body
    // doesn't include one of its own.
    _match_body: ($) => seq(optional($._newline), $.block),

    // `|` between patterns is a binary-operator-style separator: the
    // lexer's continues_line suppression lets the pattern wrap onto
    // the next line, so we accept an optional newline after `|`.
    or_pattern: ($) =>
      seq($._pattern, repeat(seq("|", optional($._newline), $._pattern))),

    cond_arm: ($) =>
      prec.dynamic(
        1,
        seq(
          field("condition", $._expression),
          "->",
          field("body", $._match_body),
        ),
      ),

    wildcard: ($) => "_",

    identifier: ($) => token(IDENT),
